--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.project.contacts'
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.project.contacts"
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -33,6 +33,9 @@ android {
 }
 
 dependencies {
+
+    def paging_version = "3.3.0"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
