Added RxJava3 and Paging3 dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 
     def paging_version = "3.3.0"
     implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-rxjava3:$paging_version"
+
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
